--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,8 @@
 [deps]
-Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+ClimateModels = "f6adb021-9183-4f40-84dc-8cea6f651bb0"
+MITgcmTools = "62725fbc-3a66-4df3-9000-e33e85b3a198"
 PackageCompiler = "9b87118b-4619-50d2-8e1e-99f35a4d4d9d"
 Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
 PlutoUI = "7f904dfe-b85e-4ff6-b463-dae2292396a8"
-StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
+StochasticDiffEq = "789caeaf-c7a9-5a7d-9973-96adeb23e2a0"
+UnicodePlots = "b8865327-cd53-5732-bb35-84acbb429228"
