--- a/Project.toml
+++ b/Project.toml
@@ -2,7 +2,9 @@
 ClimateModels = "f6adb021-9183-4f40-84dc-8cea6f651bb0"
 MITgcmTools = "62725fbc-3a66-4df3-9000-e33e85b3a198"
 PackageCompiler = "9b87118b-4619-50d2-8e1e-99f35a4d4d9d"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
 PlutoUI = "7f904dfe-b85e-4ff6-b463-dae2292396a8"
 StochasticDiffEq = "789caeaf-c7a9-5a7d-9973-96adeb23e2a0"
+Suppressor = "fd094767-a336-5f1f-9728-57cf17d0bbfb"
 UnicodePlots = "b8865327-cd53-5732-bb35-84acbb429228"
